--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,7 @@
---- --- @charset "utf-8";
+--- 
+--- 
+@charset "utf-8";
 
 @import "minimal-mistakes/skins/air"; // Skin overrides
 @import "minimal-mistakes"; // Main entry point
+@import "app-base";
