Reducing asset size - improve render

--- a/_sass/_app-base.scss
+++ b/_sass/_app-base.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-image: url('../images/full-background.png');
+  background-image: url('../images/full-background.jpg');
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
