--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -11,8 +11,12 @@
         <ul class="visible-links">
           {%- for link in site.data.navigation.main -%}
           <li class="masthead__menu-item">
-            <a href="{{ link.url | relative_url }}" {% if link.description %} title="{{ link.description }}" {% endif %}
-              {% if link.target %} target="{{ link.target }}" {% endif %}>{{ link.title }}</a>
+            <a href="{{ link.url | relative_url }}" 
+               {% if link.class %} class="{{ link.class }}" {% endif %} 
+               {% if link.description %} title="{{ link.description }}" {% endif %}
+               {% if link.target %} target="{{ link.target }}" {% endif %}>
+               {{ link.title }}
+            </a>
           </li>
           {%- endfor -%}
         </ul>
