--- a/_sass/_app-base.scss
+++ b/_sass/_app-base.scss
@@ -67,7 +67,7 @@
   max-width: 260px;
   margin-top: 15vh;
   margin-left: 2vh;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 0.5rem 1.5rem;
   background-color: rgba(1, 2, 34, 0.95);
   color: #E0E6FF;
   border: 1px solid rgba(122, 128, 255, 0.25);
